<resources>
    <string name="app_name">MAD12</string>
    <string name="all_logoname">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lineexamonline_title_exam">Title</string>
    <string name="lineexamonline_title_start">Bắt đầu:</string>
    <string name="lineexamonline_title_end">Kết thúc:</string>
    <string name="lineexamonline_button_join">Tham gia</string>


    <string name="login_signin_google">Sign in with Google</string>
    <string name="login_signin_facebook">Sign in with Facebook</string>
    <string name="login_acceptterm">I agree to the Terms and Conditions</string>
    <string name="login_copyright">Copyright @ 2021-2022 All rights reserved Team12</string>

    <string name="main_choose_subject">Chọn môn tự luyện</string>
    <string name="main_icon_home">Trang chủ</string>
    <string name="main_icon_selflearning">Tự học</string>
    <string name="main_icon_notification">Thông báo</string>
    <string name="main_icon_document">Tài liệu</string>

    <string name="documentfragment_title_document">Tài liệu</string>
    <string name="documentfragment_title_exam">Đề thi</string>

    <string name="homefragment_subject_math">Toán</string>
    <string name="homefragment_subject_physic">Vật lý</string>
    <string name="homefragment_subject_chemistry">Hóa học</string>
    <string name="homefragment_subject_literary">Văn học</string>
    <string name="homefragment_subject_geography">Địa lý</string>
    <string name="homefragment_subject_english">Tiếng Anh</string>


    <string name="selflearningfragment_desc_testonline">Tham gia thi online ngay bây giờ</string>
    <string name="selflearningfragment_desc_testoffline">Luyện đề ngay bây giờ</string>
    <string name="selflearningfragment_desc_revise">Ôn tập</string>
    <string name="selflearningfragment_title_revise">Ôn tập theo chủ đề</string>
    <string name="selflearningfragment_title_testonline">Thi thử online</string>
    <string name="selflearningfragment_title_testoffline">Luyện đề</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">1026173673255-amhccf2sajs44u4gcghpr74gbq0m9p2s.apps.googleusercontent.com</string>

    <string name="testingonline_title_report">Báo lỗi</string>
    <string name="testingonline_question">The diversity of customer’ s tastes has led to a greater....for a number of different clothing styles.</string>
    <string name="testingonline_dialog_submit">Xác nhận hoàn thành bài thi?</string>
</resources>