<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">
    <TextView
        android:id="@+id/textview_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/relativelayout_login_google"
        android:layout_below="@+id/textview_login_logo"
        android:layout_width="440dp"
        android:layout_height="79dp"
        android:layout_marginTop="30.89dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGoogle"
        >
        <TextView

            android:id="@+id/textview_login_icongoogle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="41dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_toRightOf="@id/textview_login_icongoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signin_google"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_login_facebook"
        android:layout_below="@+id/relativelayout_login_google"
        android:layout_width="440dp"
        android:layout_height="79dp"
        android:layout_marginTop="30.89dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorFacebook"
        >
        <TextView
            android:id="@+id/textview_login_iconfacebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="41dp"
            android:background="@color/colorAccent"/>
        <TextView
            android:layout_toRightOf="@id/textview_login_iconfacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signin_facebook"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/relativelayout_login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp">
        <CheckBox
            android:id="@+id/checkbox_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            />
        <TextView
            android:id="@+id/textview_login_acceptterm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/checkbox_login"
            android:text="@string/login_acceptterm"
            android:paddingTop="4dp"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_copyright"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"
        android:textColor="@color/colorBlueLogin"/>


</RelativeLayout>