<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:layout_marginLeft="19dp"
    android:layout_marginRight="19dp"
    android:background="@color/colorGoogle"
    android:layout_marginTop="14dp">

    <TextView
        android:id="@+id/textview_linetestonline_logo"
        android:layout_width="91dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textview_linetestonline_titletest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lineexamonline_title_exam"
        android:layout_toRightOf="@+id/textview_linetestonline_logo"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:id="@+id/relativelayout_linetestonline"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginTop="7dp"
        android:layout_below="@id/textview_linetestonline_titletest"
        android:layout_toRightOf="@id/textview_linetestonline_logo"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/textview_linetestonline_starttitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineexamonline_title_start"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textview_linetestonline_starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/textview_linetestonline_logo"
            android:layout_marginLeft="75dp"
            android:layout_centerVertical="true"
            tools:ignore="NotSibling" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginTop="7dp"
        android:layout_below="@id/relativelayout_linetestonline"
        android:layout_toRightOf="@id/textview_linetestonline_logo"
        android:layout_marginLeft="8dp">

        <TextView
            android:id="@+id/textview_linetestonline_endtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineexamonline_title_end"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textview_linetestonline_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/textview_linetestonline_logo"
            android:layout_marginLeft="75dp"
            android:layout_centerVertical="true"
            tools:ignore="NotSibling" />
    </RelativeLayout>
</RelativeLayout>